--- a/style.css
+++ b/style.css
@@ -1,5 +1,8 @@
 #container{
 	border: solid 3px rgb(211 211 211);
+	width: 500px;
+	margin-left: auto;
+    margin-right: auto;
 }
 
 #header{
@@ -21,83 +24,19 @@
 	background: linear-gradient(to right, rgb(66 66 66), rgb(111 111 111));
 }
 
-#right-side{
-	width: 75%;
-}
-
 .img{
-	width: 150px;
-	height: 150px;
+	width: 100px;
+	height: 100px;
 	border-radius: 35%;
-	border: solid 3px rgb(211 211 211);
-
+	border: solid 2px rgb(211 211 211);
 	display: block;
-	margin: 5% auto;
-}
-
-.header-text{
-	vertical-align: middle;
-}
-
-.title-text{
-	color: rgb(8 75 138);
-	font-weight: bold;
-	font-family: calibri;
+	margin: 15% auto;
 }
 
 p{
 	color: rgb(8 75 138);
 	font-family: calibri;
 	margin: 0%;
-}
-
-.left-side-div{
-	color: white;
-	font-family: calibri;
-	font-size: 28px;
-	
-}
-
-.right-side-div{
-	border-bottom: solid 2px rgb(0 128 255);
-	margin: 1%;
-	padding-bottom: 0.5%;
-}
-
-.left-side-p{
-	color: white;
-	font-family: calibri;
-	font-size: 22px;
-	text-align: center;
-	text-decoration: underline;
-	margin-top: 15px;
-	margin-bottom: 15px;
-}
-
-.left-menu-items{ 
-	border-radius: 5px;
-	margin: 10px;
-	margin-bottom: 5px;
-	margin-top: 5px;
-	text-align: center;
-	color: white;
-	font-size: 12px;
-	font-family: calibri;	
-}
-
-#left-menu-item1{
-	background-color: rgb(255 165 0);
-	width: 70%;
-}
-
-#left-menu-item2{
-	background-color: rgb(1 116 223); 
-	width: 50%;
-}
-
-#left-menu-item3{
-	background-color: rgb(0 128 0); 
-	width: 90%;
 }
 
 li{
@@ -107,10 +46,71 @@ li{
 
 a{
 	color: rgb(0 178 222);
+	font-family: calibri;
 }
 
 #name-div{
-	border-bottom: solid 3px rgb(255 255 0);
+	border-bottom: solid 2px rgb(255 255 0);
 	margin-left: 5%;
 	margin-right: 5%;
+}
+
+.left-side-div{
+	color: white;
+	font-family: calibri;
+	font-size: 28px;
+	
+}
+
+.left-side-p{
+	color: white;
+	font-family: calibri;
+	font-size: 18px;
+	text-align: center;
+	text-decoration: underline;
+	font-weight: bold;
+	margin-top: 15px;
+	margin-bottom: 15px;
+}
+
+.left-menu-items{ 
+	border-radius: 4px;
+	margin: 10px;
+	margin-bottom: 5px;
+	margin-top: 5px;
+	text-align: center;
+	color: white;
+	font-size: 8px;
+	font-family: calibri;	
+}
+
+#left-menu-item1{
+	background-color: rgb(255 165 0);
+	width: 55%;
+}
+
+#left-menu-item2{
+	background-color: rgb(1 116 223); 
+	width: 40%;
+}
+
+#left-menu-item3{
+	background-color: rgb(0 128 0); 
+	width: 75%;
+}
+
+#right-side{
+	width: 75%;
+}
+
+.right-side-div{
+	border-bottom: solid 2px rgb(0 128 255);
+	margin: 2.5%;
+	padding-bottom: 0.5%;
+}
+
+.title-text{
+	color: rgb(8 75 138);
+	font-weight: bold;
+	font-family: calibri;
 }
